--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 marshmallow==3.12.1
-pony==0.7.14
+pony>=0.7.14
 PyMySQL==1.0.2
 pytz==2021.1
 requests==2.25.1
